--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "solutions"}]
 
 [tool.poetry.dependencies]
 python = "~3.10"
+collections-extended = "^2.0.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
